--- a/show_room/project/templates/index.html
+++ b/show_room/project/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html'%} {% block content %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-success txt-dark">
-  <a class="navbar-brand" href="/">SOCIAL APP</a>
+  <a class="navbar-brand" href="/">SHOW ROOM</a>
   <button
     class="navbar-toggler"
     type="button"
