profile and project working right

--- a/show_room/project/templates/index.html
+++ b/show_room/project/templates/index.html
@@ -17,6 +17,7 @@
       
       
       <a class="nav-item nav-link" href="{% url 'login'%}">LOGIN</a>
+      <a class="nav-item nav-link" href="{% url 'login'%}">LOGIN</a>
       <a class="nav-item nav-link" href="{% url 'project_detail'%}">ADD PROJECT</a>
         <a class="nav-item nav-link" href="{% url 'user_logout' %}"> LOGOUT</a>
     </div>
