--- a/show_room/project/templates/project_detail.html
+++ b/show_room/project/templates/project_detail.html
@@ -32,7 +32,7 @@
           <button
             type="submit"
             class="btn btn-primary btn-lg" 
-            ><a href="{ url 'p'}">
+            ><a href="{% url 'project_view'%}">
             Submit</a>
           </button>
         </form>
