--- a/show_room/project/templates/profile.html
+++ b/show_room/project/templates/profile.html
@@ -14,7 +14,7 @@
             {{ p_form|crispy }} <!-- Profile form -->
         </fieldset>
         <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">Submit</button>
+            <button class="btn btn-outline-info" type="submit"><a href="">Submit </a></button>
         </div>
     </form>
     </div>
