--- a/show_room/project/templates/accounts/register.html
+++ b/show_room/project/templates/accounts/register.html
@@ -1,68 +1,82 @@
 {% extends 'base.html'%} {% block content %}
-<section class="vh-100 bg-image"
-  style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
+{% load crispy_forms_tags %}
+<section class="vh-100 bg-image">
   <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+    {% comment %}
     <div class="container h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-          <div class="card" style="border-radius: 15px;">
+          <div class="card" style="border-radius: 15px">
             <div class="card-body p-5">
               <h2 class="text-uppercase text-center mb-5">Create an account</h2>
 
               <form method="POST">
-{% csrf_token %}
- 
+                {% csrf_token %}
+
                 <div class="form-outline mb-4">
-                 
-                  <label class="form-label" for="form3Example1cg">Your Name</label>
-                  <input type="text">
-                   {{form.username}}
+                  <label class="form-label" for="form3Example1cg"
+                    >Your Name</label
+                  >
+                  <input type="text" />
+                  {{form.username}}
                 </div>
 
                 <div class="form-outline mb-4">
-                 
-                  <label class="form-label" for="form3Example3cg">Your Email</label>
-                   <input type="Email">
+                  <label class="form-label" for="form3Example3cg"
+                    >Your Email</label
+                  >
+                  <input type="Email" />
                   {{form.email}}
                 </div>
 
                 <div class="form-outline mb-4">
-                
-                  <label class="form-label" for="form3Example4cg">Password</label>
-                   <input type="password">
-                   {{form.password1}}
+                  <label class="form-label" for="form3Example4cg"
+                    >Password</label
+                  >
+                  <input type="password" />
+                  {{form.password1}}
                 </div>
 
                 <div class="form-outline mb-4">
-                <label class="form-label" for="form3Example4cg">Repeat Password</label>
-                 <input type="password">
-                   {{form.password2}}
-                  
+                  <label class="form-label" for="form3Example4cg"
+                    >Repeat Password</label
+                  >
+                  <input type="password" />
+                  {{form.password2}}
                 </div>
-
-               
 
                 <div class="d-flex justify-content-center">
-                  <button type="submit"
-                    class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">
+                  <button
+                    type="submit"
+                    class="btn btn-success btn-block btn-lg gradient-custom-4 text-body"
+                  >
                     <a href="{% url 'login'%}"></a>
-                  Register</button>
+                    Register
+                  </button>
                 </div>
-
-
               </form>
               {{form.errors}}
 
-              <p class="text-center text-muted mt-5 mb-0">Have already an account?</p>
-                <a href="{% url 'login'%}">login</a> 
-
+              <p class="text-center text-muted mt-5 mb-0">
+                Have already an account?
+              </p>
+              <a href="{% url 'login'%}">login</a>
             </div>
           </div>
         </div>
       </div>
     </div>
+    {% endcomment %}
+    <div class="container py-5">
+      <h1>Register</h1>
+      <form method="POST">
+        {% csrf_token %} {{ register_form|crispy }}
+        <button class="btn btn-primary" type="submit">Register</button>
+      </form>
+      <p class="text-center">
+        If you already have an account, <a href="/login">login</a> instead.
+      </p>
+    </div>
   </div>
 </section>
 {% endblock %}
-
-
