--- a/show_room/project/templates/project_view.html
+++ b/show_room/project/templates/project_view.html
@@ -1,4 +1,4 @@
-{% extends 'base.html'%} {% extends 'home.html'%}{% block content %}
+{% extends 'base.html'%} {% block content %}
 <h4>PROJECTS</h4>
 {% if all_project %}
 <div class="container">
@@ -10,17 +10,21 @@
     <img src="{{ project.image.url }}" alt="Card image cap" style="cursor: pointer; max-height: 170px; min-height: 170px">
     <p class="card-text">Title: {{ project.title }}</p></br>
     <p class="card-text">{{ project.description }}</p>
-    <p class="card-text"><a href="{{ project.project_link }}"></a></p>
-    <!--check there might be some of your styles preventing it from picking okay hun i will-->
+    <p class="card-text"><link href="{{ project.project_link }}"/></p>
+    <p> <link rel="stylesheet" href="{% url 'review' %}">ADD REVIEW</p>
+    
    
     </div>
     </div>
   </div>
   {% endfor %}
   {% endif %}
-  {% if review %}
-  {% for review in review%}
-   <p class="card-text">{{ review.rate }}</p>
+  {% if reviews %}
+  {% for review in reviews %}
+   <p class="card-text">{{ review.userbility }}</p>
+   <p class="card-text">{{ review.content }}</p>
+   <p class="card-text">{{ review.design }}</p>
+
     <p class="card-text">{{ review.review }}</p>
     {% endfor %}
 </div>
