--- a/show_room/project/templates/navbar.html
+++ b/show_room/project/templates/navbar.html
@@ -1,4 +1,3 @@
-{% extends 'base.html'%} {% block content %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-success txt-dark">
   <a class="navbar-brand" href="/">SHOW ROOM</a>
   <button
@@ -23,8 +22,7 @@
         <a class="nav-item nav-link" href="{% url 'user_logout' %}"> LOGOUT</a>
     </div>
      {% if user.is_authenticated %}
-      <a href="#">Hi {{user.username}}</a>
+      <a href="#" class="bg-text-dark">Hi {{user.username}}</a>
        {% endif %}
   </div>
 </nav>
-{% endblock %}
