--- a/show_room/project/templates/profile_view.html
+++ b/show_room/project/templates/profile_view.html
@@ -1,17 +1,22 @@
-{% extends 'base.html'%} {% load static %} {% load crispy_forms_tags%} {% block
-content %}
+{% extends 'base.html'%} 
+{% include 'home.html' %}{% load static %} {% load crispy_forms_tags%} {% block content %}
 <div class="container">
   <div class="jumbotron">
     <h1>profile</h1>
     <h3>{{ user.username}}</h3>
     <div class="col-md-4">
-      {{for profile in profiles}}
+      {% for profile in profile%}
       <img
-        src="{{ profie.profile_pic.url }}"
+        src="{{ profile.profile_pic.url }}"
         class="img-responsive"
         style="width: 100%; float: left; margin-right: 10px"
       />
-      {{ profile.bio }}
+      <p>{{ profile.bio }}</p>
+      <p>{{ profile.contact}}</p>
+      {% endfor %}
+      {% for project in project %}
+      <p>{{ project.title}}</p>
+      {% endfor %}
     </div>
   </div>
 </div>
