--- a/show_room/project/templates/profile_view.html
+++ b/show_room/project/templates/profile_view.html
@@ -15,7 +15,11 @@
       <p>{{ profile.contact}}</p>
       {% endfor %}
       {% for project in project %}
-      <p>{{ project.title}}</p>
+      <div class="container">
+    
+      <p> prpoject:{{ project.title}}</p>
+      
+      </div>
       {% endfor %}
     </div>
   </div>
