--- a/show_room/project/templates/home.html
+++ b/show_room/project/templates/home.html
@@ -1,5 +1,5 @@
 {% extends 'base.html'%} {% block content %}
-<nav class="navbar navbar-expand-lg navbar-dark bg-success txt-dark">
+<nav class="navbar navbar-expand-lg navbar-light bg-success txt-dark">
   <a class="navbar-brand" href="/">SHOW ROOM</a>
   <button
     class="navbar-toggler"
@@ -23,7 +23,7 @@
         <a class="nav-item nav-link" href="{% url 'user_logout' %}"> LOGOUT</a>
     </div>
      {% if user.is_authenticated %}
-      <a href="#">Hi {{user.username}}</a>
+      <a href="profile_view">Hi {{user.username}}</a>
        {% endif %}
   </div>
 </nav>
