--- a/show_room/project/templates/project_view.html
+++ b/show_room/project/templates/project_view.html
@@ -1,4 +1,5 @@
 {% extends 'base.html'%} {% block content %}
+<div class="container">
 <h4>PROJECTS</h4>
 {% if all_project %}
 <div class="container">
@@ -9,7 +10,7 @@
     <div class="card-body" >
     <img src="{{ project.image.url }}" alt="Card image cap" style="cursor: pointer; max-height: 170px; min-height: 170px">
     <p class="card-text">Title: {{ project.title }}</p></br>
-    <p class="card-text">{{ project.description }}</p>
+    <p class="card-text">project:description{{ project.description }}</p>
     <p class="card-text"><link href="{{ project.project_link }}"/></p>
     <p> <link rel="stylesheet" href="{% url 'review' %}">ADD REVIEW</p>
     
@@ -27,6 +28,7 @@
 
     <p class="card-text">{{ review.review }}</p>
     {% endfor %}
+</div>
 </div>
 {% endif%}
 {% endblock content %}
