--- a/show_room/project/templates/review.html
+++ b/show_room/project/templates/review.html
@@ -1,19 +1,18 @@
 {% extends "base.html" %} {% block content %} {% load crispy_forms_tags %}
 <div class="col-md-8 card mb-4 mt-3">
-  <div class="card-body">
-    <!-- projects -->
+  <div class="card-body bg-success txt-light">
     <h2>REVIEW</h2>
-  </div>
-</div>
-<div class="col-md-8 card mb-4 mt-3">
-  <div class="card-body">
-    <form method="post" style="margin-top: 1.3em">
-      {{ review_form | crispy }} {% csrf_token %}
-      <button type="submit" class="btn btn-dark btn-lg">
-        <a href="{% url 'project_view'%}"> Submit</a>
-      </button>
-    </form>
-    
+
+    <div class="col-md-8 card mb-4 mt-3">
+      <div class="card-body">
+        <form method="post" style="margin-top: 1.3em">
+          {{ review_form | crispy }} {% csrf_token %}
+          <button type="submit" class="btn btn-dark btn-lg">
+            <a href="{% url 'project_view'%}"> Submit</a>
+          </button>
+        </form>
+      </div>
+    </div>
   </div>
 </div>
 {% endblock content%}
