--- a/show_room/project/templates/profile_view.html
+++ b/show_room/project/templates/profile_view.html
@@ -7,7 +7,7 @@
     <div class="col-md-4">
       {% for profile in profile%}
       <img
-        src="{{ profile.profile_pic.url }}"
+        src="{{ project.image.url }}"
         class="img-responsive"
         style="width: 100%; float: left; margin-right: 10px"
       />
