--- a/show_room/project/templates/review.html
+++ b/show_room/project/templates/review.html
@@ -8,7 +8,7 @@
         <form method="post" style="margin-top: 1.3em">
           {{ review_form | crispy }} {% csrf_token %}
           <button type="submit" class="btn btn-dark btn-lg">
-            <a href="{% url 'project_view'%}"> Submit</a>
+             Submit
           </button>
         </form>
       </div>
