--- a/show_room/project/templates/base.html
+++ b/show_room/project/templates/base.html
@@ -1,19 +1,26 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <link
+    <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
       integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
       crossorigin="anonymous"
     />
-    {% block 'styel'%}
-  <link rel="stylesheet" href="css/bootstrap.min.css" /> 
-  <link rel="stylesheet" href="..../css/index.css" />
-  {% endblock%}
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&family=Special+Elite&display=swap"
+      rel="stylesheet"
+    />
+    {% block 'style'%}
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="{% static 'css/index.css' %}" />
+    {% endblock%}
     <title>SHOW ROOM</title>
   </head>
   <body>
