--- a/show_room/project/templates/project_detail.html
+++ b/show_room/project/templates/project_detail.html
@@ -1,50 +1,58 @@
-  {% extends "base.html" %}
-{% block title %}Project Page{% endblock title %}
-{% block content %}
-    {% load crispy_forms_tags %}
+{% extends "base.html" %} {% block title %}Project Page{% endblock title %} 
+{% block content %} {% load crispy_forms_tags %}
+<div class="container">
+  <div class="col-md-8 card mb-4 mt-3">
+    <div class="card-body">
+      <h2>projects</h2>
+      <button class="btn btn-secondary btn-lg">HOME</button>
+    </div>
+  </div>
 
-    <div class="col-md-8 card mb-4 mt-3">
-      <div class="card-body">
-        <!-- projects -->
-        <h2>projects</h2>
+  <div class="col-md-8 card mb-4 mt-3">
+    <div class="card-body">
+      {% if new_project %}
+      <div class="alert alert-success" role="alert">
+        Your project is awaiting reviewing
+      </div>
+      {% else %}
+      <form method="post" style="margin-top: 1.3em" action="/save_project/">
+        {{ project_form | crispy }} {% csrf_token %}
+        <button type="submit" class="btn btn-primary btn-lg">
+          ADD A PROJECT
+        </button>
+      </form>
+      {% endif %} {% for project in all_project %}
+      <div class="project-details-overlay hide" id="project-details-overlay">
+        <p id="close-btn">&#215;</p>
+        <div class="project-details">
+          <div class="card-body">
+            <img
+              src="{{ project.image.url }}"
+              alt=""
+              style="cursor: pointer; max-height: 170px; min-height: 170px"
+            />
+            <p class="card-text">user :{{ project.user }}</p>
+            <p class="card-text">Title: {{ project.title }}</p>
+            <p class="card-text">
+              project:description{{ project.description }}
+            </p>
+            <p class="card-text">
+              <link href="{{ project.project_link |linebreaks}}" />{{
+              project.project_link}}
+            </p>
+            <button><a href="{% url 'review'%}">ADD REVIEW</a></button>
+
+            {% if reviews %} {% for reviews in review %}
+            <p class="card-text">{{ review.userbility }}</p>
+            <p class="card-text">{{ review.content }}</p>
+            <p class="card-text">{{ review.design }}</p>
+
+            <p class="card-text">{{ review.review }}</p>
+            {% endfor %} {% endif %} {% endfor %}
+          </div>
+        </div>
       </div>
     </div>
-
-    <div class="col-md-8 card mb-4 mt-3">
-      <div class="card-body">
-        {% if new_project %}
-        <div class="alert alert-success" role="alert">
-          Your project is awaiting reviewing
-        </div>
-        {% else %}
-        <form method="post" style="margin-top: 1.3em" action="/save_project/">
-          {{ project_form | crispy }} {% csrf_token %}
-          <button type="submit" class="btn btn-primary btn-lg">ADD A PROJECT</button>
-        </form>
-        {% endif %} 
-        {% for project in all_project %}
-         <div class="project-details-overlay hide" id="project-details-overlay">
-    <p id="close-btn">&#215;</p>
-    <div class="project-details">
-    <div class="card-body" >
-    <img src="{{ project.image.url }}" alt="" style="cursor: pointer; max-height: 170px; min-height: 170px">
-    <p class="card-text">user :{{ project.user }}</p>
-    <p class="card-text">Title: {{ project.title }}</p>
-    <p class="card-text">project:description{{ project.description }}</p>
-    <p class="card-text"><link href="{{ project.project_link |linebreaks}}"/>{{ project.project_link}}</p>
-    <button><a href="{% url 'review'%}">ADD REVIEW</a></button>
-
-
-    {% if reviews %}
-  {% for reviews in review %}
-  <p class="card-text">{{ review.userbility }}</p>
-   <p class="card-text">{{ review.content }}</p>
-   <p class="card-text">{{ review.design }}</p>
-
-    <p class="card-text">{{ review.review }}</p>
-    {% endfor %}
-    {% endif %}
-        {% endfor %}
-    </div>
-    </div>
-  {% endblock %}
+  </div>
+</div>
+{% endblock %}
