--- a/show_room/project/templates/project_detail.html
+++ b/show_room/project/templates/project_detail.html
@@ -4,7 +4,7 @@
   <div class="col-md-8 card mb-4 mt-3">
     <div class="card-body">
       <h2>projects</h2>
-      <button class="btn btn-secondary btn-lg">HOME</button>
+      <button class="btn btn-secondary btn-lg"><a href="{% url 'home'%}">HOME</a></button>
     </div>
   </div>
 
