--- a/show_room/project/templates/accounts/login.html
+++ b/show_room/project/templates/accounts/login.html
@@ -9,6 +9,7 @@
       <button class="btn btn-primary" type="submit">Login</button>
     </form>
   </div>
-  <p class="text-center">Don't have an account? <a href="{% url 'accounts/register'%}">Create an account</a>.</p>
+  <p class="text-center">Don't have an account?.</p>
+  <button class="btn btn-secondary btn-lg"><a href="{% url 'register'%}">REGISTER</a></button>
 </div>
 {% endblock %}
