--- a/show_room/project/templates/project_detail.html
+++ b/show_room/project/templates/project_detail.html
@@ -1,10 +1,39 @@
-{% extends "base.html" %} {% block title %}Project Page{% endblock title %} 
-{% block content %} {% load crispy_forms_tags %}
+{% extends "base.html" %} {% block title %}Project Page{% endblock title %} {%
+block content %} {% load crispy_forms_tags %}
 <div class="container">
   <div class="col-md-8 card mb-4 mt-3">
     <div class="card-body">
       <h2>projects</h2>
-      <button class="btn btn-secondary btn-lg"><a href="{% url 'home'%}">HOME</a></button>
+      <button class="btn btn-secondary btn-lg">
+        <a href="{% url 'home'%}">HOME</a>
+      </button>
+      <form action="{% url 'search'%}" method="POST">
+        <div class="input-group">
+          <div class="form-outline">
+            <input
+              id="search-focus"
+              type="search"
+              id="form1"
+              name="category"
+              class="form-control"
+              placeholder="search..."
+              style="border-radius: 0"
+            />
+            <label
+              class="form-label"
+              for="form1"
+              placeholder="search image by name...."
+            ></label>
+          </div>
+          <button
+            type="submit"
+            class="btn btn-primary btn-sm"
+            style="max-height: 37px; border-radius: 0"
+          >
+            <i class="fas fa-search"></i>
+          </button>
+        </div>
+      </form>
     </div>
   </div>
 
