added get api for profile

--- a/show_room/project/templates/base.html
+++ b/show_room/project/templates/base.html
@@ -24,6 +24,7 @@
     <title>SHOW ROOM</title>
   </head>
   <body>
+    {% comment %} {% include 'navbar.html'%} {% endcomment %}
     {% block content%}
     <h1 class>Its working</h1>
     {% endblock%}
