--- a/show_room/project/templates/navbar.html
+++ b/show_room/project/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-success txt-dark">
+<nav class="navbar navbar-expand-lg navbar-light bg-light text-dark">
   <a class="navbar-brand" href="/">SHOW ROOM</a>
   <button
     class="navbar-toggler"
@@ -16,13 +16,13 @@
       
       
       <a class="nav-item nav-link" href="{% url 'login'%}">LOGIN</a>
-      <a class="nav-item nav-link" href="{% url 'project_view'%} ">PROJECTS</a>
+      <a class="nav-item nav-link" href="{% url 'project_detail'%} ">PROJECTS</a>
       <a class="nav-item nav-link" href="{% url 'save_project'%}">ADD PROJECT</a>
       <a class="nav-item nav-link" href="{% url 'user_profile'%}">Add PROFILE</a>
         <a class="nav-item nav-link" href="{% url 'user_logout' %}"> LOGOUT</a>
     </div>
      {% if user.is_authenticated %}
-      <a href="#" class="bg-text-dark">Hi {{user.username}}</a>
+      <a href="{% url 'profile_view'%}  "class="bg-text-dark">Hi {{user.username}}</a>
        {% endif %}
   </div>
 </nav>
