--- a/show_room/project/templates/accounts/login.html
+++ b/show_room/project/templates/accounts/login.html
@@ -2,14 +2,18 @@
 
 <!--Login-->
 <div class="container">
-  <div class="jumbotron">
-    <h1>Login</h1>
-    <form method="POST">
+ 
+    <h1 class="lg-title">Login</h1>
+    <form method="POST" class="login-form">
+     <div class="bt-login">
       {% csrf_token %} {{ login_form|crispy }}
       <button class="btn btn-primary" type="submit">Login</button>
+      </div>
     </form>
+    {% comment %} <p class="text-center">Don't have an account?.</p>
+    <button class="btn btn-secondary btn-lg" id="lg">
+      <a href="{% url 'register'%}">REGISTER</a>
+    </button> {% endcomment %}
   </div>
-  <p class="text-center">Don't have an account?.</p>
-  <button class="btn btn-secondary btn-lg"><a href="{% url 'register'%}">REGISTER</a></button>
 </div>
 {% endblock %}
