--- a/show_room/project/templates/accounts/register.html
+++ b/show_room/project/templates/accounts/register.html
@@ -12,7 +12,7 @@
 
               <form method="POST">
                 {% csrf_token %}
-
+                {{ register_form|crispy }}
                 <div class="form-outline mb-4">
                   <label class="form-label" for="form3Example1cg"
                     >Your Name</label
@@ -50,7 +50,7 @@
                     type="submit"
                     class="btn btn-success btn-block btn-lg gradient-custom-4 text-body"
                   >
-                    <a href="{% url 'login'%}"></a>
+                    {% comment %} <a href="{% url 'login'%}"></a> {% endcomment %}
                     Register
                   </button>
                 </div>
