--- a/show_room/project/templates/base.html
+++ b/show_room/project/templates/base.html
@@ -24,7 +24,37 @@
     <title>SHOW ROOM</title>
   </head>
   <body>
-    {% comment %} {% include 'navbar.html'%} {% endcomment %}
+    <nav class="navbar navbar-expand-lg navbar-light bg-light text-light">
+  <a class="navbar-brand" href="/">SHOW ROOM</a>
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarNavAltMarkup"
+    aria-controls="navbarNavAltMarkup"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse bg-light
+   txt-light" id="navbarNavAltMarkup">
+    <div class="navbar-nav bg-light ">
+      
+      <a class="nav-item nav-link" href="{% url 'home'%}">HOME</a>
+      <a class="nav-item nav-link" href="{% url 'login'%}">LOGIN</a>
+      <a class="nav-item nav-link" href="{% url 'project_detail'%} ">PROJECTS</a>
+      <a class="nav-item nav-link" href="{% url 'save_project'%}">ADD PROJECT</a>
+      <a class="nav-item nav-link" href="{% url 'user_profile'%}">Add PROFILE</a>
+      <a class="nav-item nav-link" href="{% url 'profile' %}"> view profile</a>
+        <a class="nav-item nav-link" href="{% url 'user_logout' %}"> LOGOUT</a>
+    </div>
+     {% if user.is_authenticated %}
+      <p>Hi {{user.username}}</p>
+       {% endif %}
+  </div>
+</nav>
+
     {% block content%}
     <h1 class>Its working</h1>
     {% endblock%}
