--- a/show_room/project/templates/home.html
+++ b/show_room/project/templates/home.html
@@ -1,63 +1,13 @@
 {% extends 'base.html'%} {% block content %}
-<nav class="navbar navbar-expand-lg navbar-light bg-light text-light">
-  <a class="navbar-brand" href="/">SHOW ROOM</a>
-  <button
-    class="navbar-toggler"
-    type="button"
-    data-toggle="collapse"
-    data-target="#navbarNavAltMarkup"
-    aria-controls="navbarNavAltMarkup"
-    aria-expanded="false"
-    aria-label="Toggle navigation"
-  >
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse bg-light
-   txt-light" id="navbarNavAltMarkup">
-    <div class="navbar-nav bg-light ">
-      
-      
-      <a class="nav-item nav-link" href="{% url 'login'%}">LOGIN</a>
-      <a class="nav-item nav-link" href="{% url 'project_detail'%} ">PROJECTS</a>
-      <a class="nav-item nav-link" href="{% url 'save_project'%}">ADD PROJECT</a>
-      <a class="nav-item nav-link" href="{% url 'user_profile'%}">Add PROFILE</a>
-        <a class="nav-item nav-link" href="{% url 'user_logout' %}"> LOGOUT</a>
+<div class="home">
+  <section class="smb-hero-section">
+    <div class="smb-hero-text">
+      <div>
+        <h3>Welcome to <span>PROJECTS</span></h3>
+        <P>this is the place you go to get business ideas and make a difference in the community</p>
+      </div>
     </div>
-     {% if user.is_authenticated %}
-      <a href="profile_view">Hi {{user.username}}</a>
-       {% endif %}
-  </div>
-</nav>
-
-
-<div class="container">
-<h4></h4>
-{% if all_project %}
-<div class="container">
-  {% for project in all_project %}
-  <div class="project-details-overlay hide" id="project-details-overlay">
-    <p id="close-btn">&#215;</p>
-    <div class="project-details">
-    <div class="card-body" >
-    <img src="{{ project.image.url }}" alt="Card image cap" style="cursor: pointer; max-height: 170px; min-height: 170px">
-    <p class="card-text">Title: {{ project.title }}</p></br>
-    <p class="card-text">project:description{{ project.description }}</p>
-    <p class="card-text"><link href="{{ project.project_link }}"/></p>
-    </div>
-    </div>
-  </div>
-  {% endfor %}
-  {% endif %}
-  {% if reviews %}
-  {% for review in reviews %}
-   <p class="card-text">{{ review.userbility }}</p>
-   <p class="card-text">{{ review.content }}</p>
-   <p class="card-text">{{ review.design }}</p>
-
-    <p class="card-text">{{ review.review }}</p>
-    {% endfor %}
+  </section>
 </div>
-</div>
-{% endif%}
 
 {% endblock %}
