--- a/show_room/project/templates/project_detail.html
+++ b/show_room/project/templates/project_detail.html
@@ -1,5 +1,8 @@
-{% extends "base.html" %} {% block title %}Project Page{% endblock title %} {%
-block content %} {% load crispy_forms_tags %}
+{% extends "base.html" %} {% block title %}Project Page{% endblock title %}
+ {% block content %} 
+ {% load crispy_forms_tags %}
+
+
 <div class="container">
   <div class="col-md-8 card mb-4 mt-3">
     <div class="card-body">
