--- a/show_room/project/templates/project_detail.html
+++ b/show_room/project/templates/project_detail.html
@@ -3,7 +3,8 @@
  {% load crispy_forms_tags %}
 
 
-<div class="container">
+
+<div class="prject1"></div>
   <div class="col-md-8 card mb-4 mt-3">
     <div class="card-body">
       <h2>projects</h2>
