--- a/show_room/project/static/css/index.css
+++ b/show_room/project/static/css/index.css
@@ -11,6 +11,17 @@ body {
 
 .pro-view {
   color: #dc2f02;
+   background-image: url("home1.jpg");
+  width: 90%;
+  height: 100vh;
+  background-size: auto;
+  background-position: center;
+  padding-top: 5rem;
+  color: aliceblue;
+  margin-left: 3rem;
+  background-repeat: no-repeat;
+  border-radius: 2rem;
+  align-items: center;
 }
 
 .bt-login {
@@ -107,15 +118,21 @@ color: #000;
 padding-top: 2px;
 }
 
-.project1{
-    background-image: url("project1.jpg");
-  width: 90%;
+.vh-100{
+    background-image: url("home1.jpg");
+  width: 100%;
   height: 100vh;
   background-size: auto;
   background-position: center;
-  padding-top: 5rem;
-  color: aliceblue;
+  /* padding-top: 5rem; */
+  color: whitesmoke;
   margin-left: 3rem;
   background-repeat: no-repeat;
   border-radius: 2rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.container py-5{
+  color: #c5dedd;
 }
