--- a/show_room/project/templates/profile.html
+++ b/show_room/project/templates/profile.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container">
-<div class="profile-1">
+<div class="profile">
    <div class="col-md-8 card mb-4 mt-3">
     <div class="card-body txt-light">
         <h1>This is the profile page for {{user.username}}</h1>
