--- a/show_room/project/templates/project.html
+++ b/show_room/project/templates/project.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}Project Page{% endblock title %} 
+{% comment %} {% extends "base.html" %} {% block title %}Project Page{% endblock title %} 
 {% block content %} {% load crispy_forms_tags %}
 <div class="container">
   <div class="col-md-8 card mb-4 mt-3">
@@ -109,4 +109,4 @@
       the card's content.
     </p>
   </div>
-</div>
+</div> {% endcomment %}
